Filling in more of the backend Tracking membership changes
